create master intersect function

--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -68,6 +68,7 @@ crit_table <- table_crit(ClippedCritHab_sf, studyArea, leatherback_sf)
 Dist_query_output_table <- if(Dist_overlap_result < 1){
   ""
 } else {
+  dist_table
 }
 if(Dist_overlap_result > 1){Dist_query_output_table}
 ```
@@ -89,18 +90,18 @@ attribute <- "Common_Nam"
 legend_name <- "Common Name"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 
 ```{r crithab region plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA) in the Scotian Shelf Bioregion. Please see table below for complimentary information. Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species.” Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.', fig.height=6, fig.width=11}
-if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute, legendName = legend_name)
+if (!is.null(clipped$regionData)){
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute, legendName = legend_name)
 }  
 ```
 
 ```{r crithab area plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA)', fig.height=6, fig.width=11}
-if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly, attribute, legendName = legend_name)
+if (!is.null(clipped$mapData)){
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData, attribute, legendName = legend_name)
 }  
 ```
 
@@ -111,17 +112,17 @@ poly_sf <- leatherback_sf
 attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 
 ```{r leatherback region plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes draft critical habitat of Leatherback Sea Turtle in the Scotian Shelf Bioregion, relative to the search area.', fig.height=6, fig.width=11}
-if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
+if (!is.null(clipped$regionData)){
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute)
 }   
 ```
 
 ```{r leatherback area plot, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with draft critical habitat of Leatherback Sea Turtle', fig.height=6, fig.width=11}
-if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
+if (!is.null(clipped$mapData)){
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData,attribute)
 }  
 ```
