--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -44,7 +44,7 @@ studyArea <- sf::st_read("{{path_to_geoms}}")
 # studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
  studyArea <- st_read("../studyAreaTest/geoms_slc_coastal_test.geojson")#coastal
 # studyArea <- st_read("../studyAreaTest/geoms_slc_no_land.geojson")#no land
-Region <- st_read("../studyAreaTest/geoms_slc_MarBioRegion.geojson")
+region <- st_read("../studyAreaTest/geoms_slc_MarBioRegion.geojson")
 site <- sf::st_centroid(studyArea)
 ```
 
@@ -62,7 +62,7 @@ bboxMap=areaMapList[[2]] #bounding box of the map
 
 ```{r parameters for region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
 # Bounding box for the region
-regionBox <- sf::st_bbox(Region)
+regionBox <- sf::st_bbox(region)
 
 # Create the regional map
 regionMap <- region_map(regionBox, studyArea, land10m_sf, bounds_sf)  
