--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -42,7 +42,7 @@ Please note the following important disclaimers and caveats associated with sigh
 #### ***Area-specific WSDB search results***
 
 ```{r wsdb, include=FALSE, cache=FALSE}
-outputList <- point_intersect(wsdb_sf, studyArea, mapBbox = bboxMap)
+outputList <- master_intersect(wsdb_sf, region, studyArea, mapBbox = bboxMap)
 
 if (!is.null(outputList)) {
 wsdb_points <- sfcoords_as_cols(outputList$mapData)
@@ -81,7 +81,7 @@ The following description of cetacean sightings data collection methods used by 
 #### ***Area-specific Whitehead Lab search results***
 
 ```{r whitehead, include=FALSE, cache=FALSE}
-outputList <- point_intersect(whitehead_sf, studyArea, mapBbox = bboxMap)
+outputList <- master_intersect(whitehead_sf, region, studyArea, mapBbox = bboxMap)
 if (!is.null(outputList)) {
   whitehead_points <- sfcoords_as_cols(outputList$mapData)
 }
@@ -120,7 +120,7 @@ The NARWC Sightings Database contains records of thousands of sightings of Right
 
 #### ***Area-specific NARWC search results***
 ```{r narwc, include=FALSE, cache=FALSE}
-outputList <- point_intersect(narwc_sf, studyArea, mapBbox = bboxMap)
+outputList <- master_intersect(narwc_sf, region, studyArea, mapBbox = bboxMap)
 
 if (!is.null(outputList)) {
   narwc_points <- sfcoords_as_cols(outputList$mapData)
@@ -158,7 +158,7 @@ An OBIS search [@OBIS] was conducted to find additional relevant records for cet
 #### ***Area-specific OBIS cetacean search results***
 
 ```{r obis cetecean, include=FALSE, cache=FALSE}
-outputList <- point_intersect(obis_cet_sf, studyArea, mapBbox = bboxMap)
+outputList <- master_intersect(obis_cet_sf, region, studyArea, mapBbox = bboxMap)
 
 if (!is.null(outputList)) {
   obis_cet_points <- sfcoords_as_cols(outputList$mapData)
@@ -233,11 +233,11 @@ poly_sf <- BlueWhale_ImpHab_sf
 attribute <- "Activity"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 *
 ```{r bw result, echo=FALSE, results='asis'}
-polyText <- if(is.null(clipped$studyPoly)){"Search area does not overlap with Blue Whale Important Habitat in the Western North Atlantic."
+polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with Blue Whale Important Habitat in the Western North Atlantic."
 } else {"Search area overlaps with Blue Whale Important Habitat in the Western North Atlantic."}
 
  polyText <- noquote(polyText)
@@ -245,15 +245,15 @@ polyText <- if(is.null(clipped$studyPoly)){"Search area does not overlap with Bl
 ```
 
 ```{r bw region plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Blue Whale Important Habitat in the Western North Atlantic. Polygons delimit areas in Canadian waters that are important to Blue Whales for foraging and migration. These areas identified in the report by Lesage et al. (2018) are considered important for the survival and recovery of Blue Whales from the western North Atlantic population. Blue Whales most likely need to use several of these important habitats to fulfill their biological needs. As a result, access corridors and habitat they connect need to be considered equally important for the population.'}
-if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
+if (!is.null(clipped$regionData)){
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute)
 }  
 ```
 
 
 ```{r bw area plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with Blue Whale Important Habitat.'}
-if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
+if (!is.null(clipped$mapData)){
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData,attribute)
 }
 ```
 
@@ -278,29 +278,29 @@ The inter-canyon habitat area polygon was delineated using the 500 m depth conto
 #### ***Area-specific Northern Bottlenose Whale Important Habitat in inter-canyon areas on the eastern Scotian Shelf search results***
 
 ```{r overlap nbw habitat, echo=FALSE, results='asis'}
-poly_sf=NBNW_ImpHab_sf
-attribute="NONE"
+poly_sf <- NBNW_ImpHab_sf
+attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf,Region,studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 *
 ```{r nbw result, echo=FALSE, results='asis'}
-polyText<-if(is.null(clipped$studyPoly)){"Search area does not overlap with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf."
+polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf."
 } else {"Search area overlaps with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf."}
 
- polyText<-noquote(polyText)
+ polyText <- noquote(polyText)
  writeLines(polyText)
 ```
 
 ```{r nbw region plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Proposed Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
-if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionPoly,attribute)
+if (!is.null(clipped$regionData)){
+  plot_polygons(regionMap,regionBox,studyBox_geom, clipped$regionData,attribute)
 }
 ```
 
 ```{r nbw area plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf.'}
-if (!is.null(clipped$mapPoly)){
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapPoly,attribute)
+if (!is.null(clipped$mapData)){
+  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData,attribute)
 }
 ```
