--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -44,20 +44,20 @@ EBSA_bioregion(EBSA_sf, studyArea)
 ```
 ```{r overlap EBSA and plot, echo=FALSE, results='asis'}
 # define polygon dataset and attribute to plot
-poly_sf=EBSA_sf
-attribute="NONE"
+poly_sf <- EBSA_sf
+attribute <- "NONE"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- poly_intersect(poly_sf, Region, studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
 ```
 
 ```{r EBSA region plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
-if (!is.null(clipped$regionPoly)){
-  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionPoly, attribute)
+if (!is.null(clipped$regionData)){
+  plot_polygons(regionMap, regionBox, studyBox_geom, clipped$regionData, attribute)
 }
 ```
 
 ```{r EBSA area plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
-if(!is.null(clipped$studyPoly)){print(
-  plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapPoly,attribute))}
+if(!is.null(clipped$studyData)){print(
+  plot_polygons(areaMap,bboxMap,studyBox_geom, clipped$mapData,attribute))}
 ```
