--- a/app/Rmd/report_planning_FR.Rmd
+++ b/app/Rmd/report_planning_FR.Rmd
@@ -19,6 +19,6 @@ Description de l’ensemble de données (tirée du dossier des données ouvertes
 
 **under-development**
 
-```{r EBSA plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue.'}
+```{r EBSA-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue.'}
 #plot_EBSA(EBSA_sf, studyArea, land10m_sf, 300)
 ```
